# datasette2vercel

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette2vercel/: __init__.py
datasette_publish_vercel/: __init__.py
tests/: test_publish_vercel.py
